--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                 .to(cubeContainer, { duration: 1, opacity: 0 }, "+=1") // Hide the cube container 1 second after the rings animation
                 .call(() => {
                     // Redirect after animations complete
-                    window.location.href = redirectURL;
+                    window.location.href = "loading.html";
                 });
         }
         
